# cmakeTest

./: .gitignore
Common/: CMakeLists.txt
Stage1/: CMakeLists.txt
Stage1/inc/: Common.h
Stage1/src/: main.cpp
Stage1/src/Logging/: LoggerUtils.cpp
Stage2/: CMakeLists.txt
Stage2/src/: main.cpp
